--- a/pom.xml
+++ b/pom.xml
@@ -338,6 +338,11 @@
             <artifactId>vavr</artifactId>
             <version>0.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.5.3</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
 
