--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -43,7 +43,8 @@ spring:
             auto-commit: false
     h2:
         console:
-            enabled: false
+            enabled: true
+            path: /h2-console
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedH2Dialect
         database: H2
