--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "2.22.2",
     "ng-jhipster": "0.5.6",
     "ngx-cookie": "2.0.1",
+    "ngx-file-drop": "^6.0.0",
     "ngx-infinite-scroll": "6.0.1",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
