--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -45,10 +45,19 @@ spring:
     liquibase:
         contexts: prod
     mail:
-        host: localhost
-        port: 25
-        username:
-        password:
+        host: smtp.gmail.com
+        port: 587
+        username: snorlax.io2019@gmail.com  # Replace this field with your Gmail username.
+        password: fwacuwauattdiaai          # Replace this field with your Gmail password.
+        protocol: smtp
+        properties.mail.smtp:
+            auth: true
+            starttls.enable: true
+            starttls.required: true
+            ssl.trust: smtp.gmail.com
+            connectiontimeout: 5000
+            timeout: 5000
+            writetimeout: 5000
     thymeleaf:
         cache: true
 
@@ -128,4 +137,6 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-# application:
+application:
+    admin:
+        mail: snorlax.io2019@gmail.com
