--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "7.0.2",
+    "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^7.2.10",
     "@ngtools/webpack": "7.0.2",
     "@types/jest": "23.3.5",
