Basic upload update

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-cookie": "2.0.1",
     "ngx-file-drop": "^6.0.0",
     "ngx-infinite-scroll": "6.0.1",
+    "ngx-logger": "^3.3.13",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
@@ -42,7 +43,7 @@
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "9.2.0",
-    "browser-sync": "2.26.3",
+    "browser-sync": "^2.26.5",
     "browser-sync-webpack-plugin": "2.2.2",
     "cache-loader": "1.2.2",
     "codelyzer": "4.5.0",
