--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "bootstrap": "4.3.1",
     "core-js": "2.5.7",
+    "deep-diff": "^1.0.2",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.6",
     "ngx-cookie": "2.0.1",
