--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
+    "@ng-select/ng-select": "^2.19.0",
     "bootstrap": "4.3.1",
+    "bootstrap-select": "^1.13.10",
     "core-js": "2.5.7",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.6",
     "ngx-cookie": "2.0.1",
     "ngx-file-drop": "^6.0.0",
     "ngx-infinite-scroll": "6.0.1",
-    "ngx-logger": "^3.3.13",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
@@ -43,7 +44,7 @@
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "9.2.0",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "2.26.3",
     "browser-sync-webpack-plugin": "2.2.2",
     "cache-loader": "1.2.2",
     "codelyzer": "4.5.0",
