--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@ng-select/ng-select": "^2.19.0",
     "bootstrap": "4.3.1",
     "bootstrap-select": "^1.13.10",
+    "chart.js": "^2.8.0",
     "core-js": "2.5.7",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.6",
+    "ng2-charts": "^2.2.3",
     "ngx-cookie": "2.0.1",
     "ngx-file-drop": "^6.0.0",
     "ngx-infinite-scroll": "6.0.1",
